# py-gpt-slack-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yaml  pyproject.toml
src/: app.py
